--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gulp-changed": "^1.3.0",
     "gulp-compass": "^2.1.0",
     "gulp-eslint": "^2.0.0",
+    "gulp-htmlhint": "^0.3.1",
     "gulp-jspm": "^0.5.7",
     "gulp-replace": "^0.5.4",
     "gulp-shell": "^0.5.2",
